add material icons

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
     "typescript": "5.3.3"
   }
 }
